refactor: update OfferingTeacherDto to OfferingTeacherItemDto and enhance related documentation
- Renamed OfferingTeacherDto to OfferingTeacherItemDto to better reflect its purpose as a derived representation of teachers assigned to offerings.
- Updated API documentation to clarify the role of main and slot teachers, including their respective roles in the context of offerings.
- Adjusted related code references throughout the application to ensure consistency with the new naming convention.
- Enhanced the Offering API to derive teacher lists from main teachers and slot teachers, streamlining the retrieval process.
- Removed obsolete OfferingTeacherDto class and updated related services and controllers to utilize the new OfferingTeacherItemDto.