@@ -6,7 +6,7 @@ import com.example.interhubdev.offering.LessonEnrichmentDataPort;
 import com.example.interhubdev.offering.LessonEnrichmentItem;
 import com.example.interhubdev.offering.OfferingSlotDto;
 import com.example.interhubdev.offering.OfferingSlotKey;
-import com.example.interhubdev.offering.OfferingTeacherDto;
+import com.example.interhubdev.offering.OfferingTeacherItemDto;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,7 +21,7 @@ import java.util.stream.Collectors;
 
 /**
  * Batch loads offering, slot and teachers for lesson enrichment (no N+1).
- * Only depends on repositories; used by adapter for schedule display.
+ * Teachers are derived from main teacher and slot teachers per offering.
  */
 @Service
 @RequiredArgsConstructor
@@ -30,7 +30,6 @@ class OfferingLessonEnrichmentService implements LessonEnrichmentDataPort {
 
     private final GroupSubjectOfferingRepository offeringRepository;
     private final OfferingSlotRepository slotRepository;
-    private final OfferingTeacherRepository offeringTeacherRepository;
     private final CurriculumSubjectLookupPort curriculumSubjectLookupPort;
 
     @Override
@@ -45,10 +44,8 @@ class OfferingLessonEnrichmentService implements LessonEnrichmentDataPort {
                 .collect(Collectors.toMap(GroupSubjectOffering::getId, OfferingMappers::toOfferingDto));
         Map<UUID, OfferingSlotDto> slotById = slotIds.isEmpty() ? Map.of() : slotRepository.findAllById(slotIds).stream()
                 .collect(Collectors.toMap(OfferingSlot::getId, OfferingMappers::toSlotDto));
-        List<OfferingTeacher> allTeachers = offeringTeacherRepository.findByOfferingIdInOrderByRoleAscCreatedAtAsc(offeringIds.stream().toList());
-        Map<UUID, List<OfferingTeacherDto>> teachersByOfferingId = allTeachers.stream()
-                .collect(Collectors.groupingBy(OfferingTeacher::getOfferingId,
-                        Collectors.mapping(OfferingMappers::toTeacherDto, Collectors.toList())));
+        List<OfferingSlot> allSlots = slotRepository.findByOfferingIdInOrderByDayOfWeekAscStartTimeAsc(offeringIds.stream().toList());
+        Map<UUID, List<OfferingTeacherItemDto>> teachersByOfferingId = deriveTeachersByOfferingIds(offeringById, allSlots);
 
         Set<UUID> curriculumSubjectIds = offeringById.values().stream()
                 .map(GroupSubjectOfferingDto::curriculumSubjectId)
@@ -62,12 +59,34 @@ class OfferingLessonEnrichmentService implements LessonEnrichmentDataPort {
         for (OfferingSlotKey key : keys) {
             GroupSubjectOfferingDto offering = offeringById.get(key.offeringId());
             OfferingSlotDto slot = key.slotId() != null ? slotById.get(key.slotId()) : null;
-            List<OfferingTeacherDto> teachers = teachersByOfferingId.getOrDefault(key.offeringId(), Collections.emptyList());
+            List<OfferingTeacherItemDto> teachers = teachersByOfferingId.getOrDefault(key.offeringId(), Collections.emptyList());
             String subjectName = offering != null && offering.curriculumSubjectId() != null
                     ? subjectNamesByCurriculumSubjectId.get(offering.curriculumSubjectId())
                     : null;
             result.add(new LessonEnrichmentItem(offering, slot, teachers, subjectName));
         }
         return result;
+    }
+
+    private Map<UUID, List<OfferingTeacherItemDto>> deriveTeachersByOfferingIds(
+            Map<UUID, GroupSubjectOfferingDto> offeringById,
+            List<OfferingSlot> allSlots) {
+        Map<UUID, List<OfferingSlot>> slotsByOfferingId = allSlots.stream()
+                .collect(Collectors.groupingBy(OfferingSlot::getOfferingId));
+        return offeringById.keySet().stream()
+                .map(offeringId -> {
+                    GroupSubjectOfferingDto offering = offeringById.get(offeringId);
+                    List<OfferingTeacherItemDto> teachers = new ArrayList<>();
+                    if (offering != null && offering.teacherId() != null) {
+                        teachers.add(new OfferingTeacherItemDto(offering.teacherId(), null));
+                    }
+                    for (OfferingSlot slot : slotsByOfferingId.getOrDefault(offeringId, List.of())) {
+                        if (slot.getTeacherId() != null) {
+                            teachers.add(new OfferingTeacherItemDto(slot.getTeacherId(), slot.getLessonType()));
+                        }
+                    }
+                    return Map.entry(offeringId, teachers);
+                })
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 }
